# bio-ml-agent_v0.2

./: .env  .gitignore  Dockerfile  GELISTIRME_PLANI.md  KULLANMA_KILAVUZU.md  RAPOR.md  README.md  V6_YOL_HARITASI.md  agent.py  api_server.py  bioeng_toolkit.py  config.example.yaml  config.yaml  dashboard.py  dataset_catalog.py  deep_learning.py  docker-compose.yml  exceptions.py  llm_backend.py  memory_manager.py  mlflow_tracker.py  multi_agent.py  patch_agent.py  plugin_manager.py  progress.py  pyproject.toml  rag_engine.py  report_generator.py  requirements.txt  start_flask_only.sh  start_whatsapp_bot.sh  tasks.json  test_api.py  test_xai.py  web_ui.py  whatsapp_connector.py  xai_engine.py
.github/workflows/: test.yml
models/: messages.py
plugins/: __init__.py  example_plugin.py
services/: agent_service.py
static/: dashboard.html
swarm/: bioinfo_expert.py  data_engineer.py  ml_expert.py  orchestrator.py
tests/: conftest.py  test_agent.py  test_bioeng_toolkit_integration.py  test_dataset_catalog.py  test_e2e.py  test_exceptions.py  test_llm_backend.py  test_model_compare.py  test_model_save_load.py  test_multi_agent.py  test_path_strip.py  test_plugin_manager.py  test_preprocessor.py  test_progress.py  test_rag.py  test_report_generator.py  test_smoke.py  test_visualize.py  test_web_ui.py
utils/: config.py  hyperparameter_optimizer.py  model_compare.py  model_loader.py  preprocessor.py  visualize.py
whatsapp-client/: index.js  package-lock.json  package.json
whatsapp-client/.wwebjs_auth/session/: DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket  first_party_sets.db
whatsapp-client/.wwebjs_cache/: 2.3000.1034264502.html  2.3000.1034265109.html
workspace/: pdb_1crn.txt  pdb_summary.txt
workspace/.rag_db/: chroma.sqlite3
workspace/Kanser_Hücresi_Analizi/: README.md  biyo_analiz_raporu.md  read_csv.py  report.md
workspace/Kanser_Hücresi_Analizi/results/: best_model.pkl  best_optimized_randomforest.pkl  best_params_randomforest.json  comparison_report.md  comparison_results.json  report.md  (+1 more)
workspace/bio_test/: biyo_analiz_raporu_derleme.md
workspace/diabetes/: README.md  dataset_catalog.py  report.md
workspace/scratch_project/: requirements.txt
(+107 files in other folders)
